--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </li>
                 <li>
                     <a href="tenzin.ngawang0@gmail.com">
-                        <img src="/image/email.png" alt="email logo">
+                        <img src="image/email.png" alt="email logo">
                     </a>
                 </li>
             </ul>
