--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <div class="about-me-content">
             <section>
                 <div class="profile-pic">
-                    <img src="/image/profile.jpg" style="width:155px; height: 148px;" alt="profile pic">
+                    <img src="image/profile.jpg" style="width:155px; height: 148px;" alt="profile pic">
                 </div>
                     
                 <p class="about-me-text">I’m a Web Developer in Progress. A current student of Thinkful’s web-development 
@@ -50,16 +50,16 @@
         
             <div class="tech-logos">
                 <div class="tech-logo">
-                    <img src="/image/HTML5_Logo.png" alt="html5 logo">
+                    <img src="image/HTML5_Logo.png" alt="html5 logo">
                 </div>
                 <div class="tech-logo">
-                    <img src="/image/CSS.3.svg.png" alt="Css logo">
+                    <img src="image/CSS.3.svg.png" alt="Css logo">
                 </div>
                 <div class="tech-logo">
-                    <img src="/image/javascript-logo.PNG" alt="JS logo">
+                    <img src="image/javascript-logo.png" alt="JS logo">
                 </div>
                 <div class="tech-logo">
-                    <img src="/image/jQuery.png" alt="Jquery logo">
+                    <img src="image/jQuery.png" alt="Jquery logo">
                 </div>
             </div>
         </div>
