--- a/about.html
+++ b/about.html
@@ -69,17 +69,17 @@
             <ul class="social-footer-icons">
                 <li>
                     <a href="https://github.com/Tenzin1010">
-                    <img src="/image/GitHub-Mark-64px.png" alt="github logo">
+                    <img src="image/GitHub-Mark-64px.png" alt="github logo">
                     </a>  
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/tenzinngawang1">
-                        <img src="/image/linkedin-logo-black.png" alt="linkedin logo">
+                        <img src="image/linkedin-logo-black.png" alt="linkedin logo">
                     </a>
                 </li>
                 <li>
                     <a href="tenzin.ngawang0@gmail.com">
-                        <img src="/image/email.png" alt="email logo">
+                        <img src="image/email.png" alt="email logo">
                     </a>
                 </li>
             </ul>
