--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <title>About Me</title>
 </head>
 <body>
@@ -32,34 +33,32 @@
         <div class="intro">
             <header class = "intro-bio">
                 <h1>ABOUT ME</h1>
-                <h2 class = "subtitle">An aspiring front-end web developer a curious tinker and a part-time philosopher </h2>
+                <h2 class = "subtitle">I'm an aspiring front-end web developer a curious thinker and a part-time philosopher </h2>
             </header>
         </div>
         <div class="about-me-content">
             <section>
                 <div class="profile-pic">
-                    <img src="image/profile.jpg" style="width:155px; height: 148px;" alt="profile pic">
+                    <img src="/image/profile.jpg" style="width:155px; height: 148px;" alt="profile pic">
                 </div>
                     
-                <p class="about-me-text">I’m a Web Developer in Progress. A current student of Thinkful’s web-development 
-                    program with projected graduation September 2019. I have always been interested 
-                    in software development as a career and only recently wagered “All-In” to pursue 
-                    this dream. I like to humbly compare my experiences as very “Forrest Gump” like. 
+                <p class="about-me-text">I'm currently a student at Thinkful web-development program, with projected graduation date of September 2019. I have always been interested in 
+                        software development as a career and only recently wagered “All-In” to pursue this dream. I like to humbly describe my experiences as very “Forrest Gump” like. 
                 </p>
             </section>
         
             <div class="tech-logos">
                 <div class="tech-logo">
-                    <img src="image/HTML5_Logo.png" alt="html5 logo">
+                    <img src="/image/HTML5_Logo.png" alt="html5 logo">
                 </div>
                 <div class="tech-logo">
-                    <img src="image/CSS.3.svg.png" alt="Css logo">
+                    <img src="/image/CSS.3.svg.png" alt="Css logo">
                 </div>
                 <div class="tech-logo">
-                    <img src="image/javascript-logo.png" alt="JS logo">
+                    <img src="/image/javascript-logo.png" alt="JS logo">
                 </div>
                 <div class="tech-logo">
-                    <img src="image/jQuery.png" alt="Jquery logo">
+                    <img src="/image/jQuery.png" alt="Jquery logo">
                 </div>
             </div>
         </div>
@@ -69,21 +68,22 @@
             <ul class="social-footer-icons">
                 <li>
                     <a href="https://github.com/Tenzin1010">
-                    <img src="image/GitHub-Mark-64px.png" alt="github logo">
+                    <img src="/image/GitHub-Mark-64px.png" alt="github logo">
                     </a>  
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/tenzinngawang1">
-                        <img src="image/linkedin-logo-black.png" alt="linkedin logo">
+                        <img src="/image/linkedin-logo-black.png" alt="linkedin logo">
                     </a>
                 </li>
                 <li>
                     <a href="tenzin.ngawang0@gmail.com">
-                        <img src="image/email.png" alt="email logo">
+                        <img src="/image/email.png" alt="email logo">
                     </a>
                 </li>
             </ul>
         </div>
     </footer>
+    <script src="index.js"></script> 
 </body>
 </html>
