--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="intro">
             <header class = "intro-bio">
                 <h1>Front End Developer</h1>
-                <h2 class = "subtitle">An aspiring front-end web developer a curious tinker and a part-time philosopher </h2>
+                <h2 class = "subtitle">I'm an aspiring front-end web developer a curious thinker and a part-time philosopher.</h2>
             </header>
             <a id="portfolio-btn" href="#all-projects">View Portfolio
             </a>
@@ -41,15 +41,15 @@
                 <li class = "projects">
                     <h2>A Quiz App testing your Football knowledge</h2>
                     <a href="https://tenzin1010.github.io/soccer-quiz/">
-                        <img src="image/quiz-app.jpg" alt="screenshot quiz app">
+                        <img src="/image/quiz-app.jpg" alt="screenshot quiz app">
                     </a>
                     <h3>HTML, CSS, JavaScript, JQuery</h3>
                 </li>
             </ul>
         <div class = "about-me">   
-            <h2 class = "about-me-subtitle">Who Ami I</h2>
-            <p class = "about-me-field-help">I’m a Web Developer in Progress. A current student of Thinkful’s web-development program with projected graduation September 2019. I have always been interested in 
-            software development as a career and only recently wagered “All-In” to pursue this dream. I like to humbly compare my experiences as very “Forrest Gump” like. Contact me using email below: </p>
+            <h2 class = "about-me-subtitle">Who Am I</h2>
+            <p class = "about-me-field-help">I'm currently a student at Thinkful web-development program, with projected graduation date of September 2019. I have always been interested in 
+            software development as a career and only recently wagered “All-In” to pursue this dream. I like to humbly describe my experiences as very “Forrest Gump” like. Contact me using email below: </p>
             <div class="about-me-contact-field">
                 <a href="mailto:tenzin.ngawang0@gmail.com">
                     <button type="button" id="about-me-email-btn">EMAIL</button>
@@ -62,17 +62,17 @@
             <ul class="social-footer-icons">
                 <li>
                   <a href="https://github.com/Tenzin1010">
-                    <img src="image/media.png" alt="github logo">
+                    <img src="/image/media.png" alt="github logo">
                   </a>  
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/tenzinngawang1">
-                        <img src="image/linkedin-logo-black.png" alt="linkedin logo">
+                        <img src="/image/linkedin-logo-black.png" alt="linkedin logo">
                     </a>
                 </li>
                 <li>
                     <a href="tenzin.ngawang0@gmail.com">
-                        <img src="image/email.png" alt="email logo">
+                        <img src="/image/email.png" alt="email logo">
                     </a>
                 </li>
             </ul>
