--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header role="header" id="header-nav">
@@ -41,11 +42,12 @@
                 <li class = "projects">
                         <h2>How much do you know about football</h2>
                     <a href="https://tenzin1010.github.io/soccer-quiz/">
-                        <img src="image/quiz-app.jpg" id="soccer-quiz-img" alt="screenshot quiz app">
+                        <img src="/image/quiz-app.jpg" id="soccer-quiz-img" alt="screenshot quiz app">
                     </a>
                     <div class="projects-details">
                         <ul>
-                            <li>The app is scalable, functions re-useable, the number of questions can be changed without effecting quiz results</li>
+                            <li>This is a 10 question quiz app testing your soccer/football knowledge. The functions are re-useable, 
+                                the number of questions can be changed without affecting the result. Click "Kick Off" to give it a try.</li>
                             <li>Skills utilized: HTML, CSS, JavaScript, JQuery</li>
                             <li>
                                <a href="https://tenzin1010.github.io/soccer-quiz/">Here's a link to the live app</a> 
@@ -57,7 +59,7 @@
                     </div>
                     <div class="portfolio-video-clip">
                         <video class="soccer-quiz-video-clip" controls>
-                            <source src="image/soccer-quiz-clip.mp4" type="video/mp4">
+                            <source src="/image/soccer-quiz-clip.mp4" type="video/mp4">
                             Your browser does not support the video tag
                         </video>
                     </div> 
@@ -70,17 +72,17 @@
             <ul class="social-footer-icons">
                 <li>
                     <a href="https://github.com/Tenzin1010">
-                        <img src="image/GitHub-Mark-64px.png" alt="github logo">
+                        <img src="/image/GitHub-Mark-64px.png" alt="github logo">
                     </a>  
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/tenzinngawang1">
-                        <img src="image/linkedin-logo-black.png" alt="linkedin logo">
+                        <img src="/image/linkedin-logo-black.png" alt="linkedin logo">
                     </a>
                 </li>
                 <li>
                     <a href="tenzin.ngawang0@gmail.com">
-                        <img src="image/email.png" alt="email logo">
+                        <img src="/image/email.png" alt="email logo">
                     </a>
                 </li>
             </ul>
